kubernetes/multi-pod-networking/yml/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-dev
  labels:
    environment: development
    application: multi
