kubernetes/multi-pod-networking/yml/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-service-backend
  labels:
    application: multi-backend
spec:
  selector:
    application: multi-backend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
