kubernetes/multi-pod-networking/yml/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: multi-service-frontend
  labels:
    application: multi-frontend
spec:
  selector:
    application: multi-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
